# neurocortex

./: .gitignore  LICENSE  README.md  phase3.md  phase4.md  pyproject.toml  run_neurocortex.bat  需求设计文档.md
neurocortex/: __init__.py  main.py  requirements.txt
neurocortex/api/: __init__.py  schemas.py  server.py
neurocortex/config/: model_config.yaml
neurocortex/core/: __init__.py  adaptive_params.py  brainstem.py  config_loader.py  event_bus.py  prefrontal_config.py  telemetry.py  thalamus.py
neurocortex/data/: knowledge_graph.json
neurocortex/data/chromadb_storage/: chroma.sqlite3
neurocortex/memory/: __init__.py  association_engine.py  consolidation.py  hippocampus.py  knowledge_base.py
neurocortex/pathways/: __init__.py
neurocortex/pathways/fast/: __init__.py  amygdala.py  basal_ganglia.py
neurocortex/pathways/slow/: __init__.py  frontal_lobe.py  occipital_lobe.py  parietal_lobe.py  temporal_lobe.py
neurocortex/reasoning/: __init__.py  cot_engine.py  critique_module.py
neurocortex/tools/: __init__.py  basic_tools.py  registry.py
neurocortex/ui/: __init__.py  config_dashboard.py  visualizer.html
tests/: conftest.py  test_basal_ganglia.py  test_frontal_lobe.py  test_knowledge_base.py  test_thalamus.py
