[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "neurocortex-ai"
version = "1.0.0"
description = "基于大脑解剖学架构的类脑智能系统"
readme = "README.md"
license = {text = "CC-BY-NC-4.0"}
requires-python = ">=3.12"

dependencies = [
    "pyyaml>=6.0",
    "loguru>=0.7",
    "apscheduler>=3.10",
    "chromadb>=0.4",
    "networkx>=3.0",
    "ollama>=0.4",
    "openai>=1.0",
    "anthropic>=0.25",
    "sentence-transformers>=2.2",
    "streamlit>=1.30",
    "streamlit-agraph>=0.0.45",
    "aiohttp>=3.9",
    "openai-whisper>=20231117",
    "Pillow>=10.0.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["neurocortex*"]
